--- a/src/css/global.css
+++ b/src/css/global.css
@@ -9,15 +9,6 @@ body {
 ul li a.current {
   color: var(--fontPrimaryColor) !important;
 }
-/* .header-content-area:before {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  background-color: rgba(33, 32, 71, 0.7);
-  height: 100vh;
-  width: 100%;
-} */
 .intro-text {
   text-align: center;
   padding-top: 60px;
@@ -597,14 +588,18 @@ ul {
 }
 
 .progress:last-child {
-  margin-bottom: 0;
+  margin-bottom: 20px;
+}
+
+.progress-bar-container:last-child {
+  margin-bottom: 100px;
 }
 
 .progress-top {
   color: #fff;
   text-transform: capitalize;
   font-size: 23px;
-  margin-bottom: 0;
+  margin-bottom: 20px;
 }
 
 .progressbar-title {
