--- a/src/css/global.css
+++ b/src/css/global.css
@@ -949,7 +949,7 @@ ul {
   font-weight: 600;
 }
 
-.experience-content p {
+.experience-content div {
   font-size: 16px;
   color: #efefef;
   line-height: 25px;
