--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1399,13 +1399,12 @@ ul {
 
 /*11.3 copyright text*/
 .copyright {
-  background-color: #101325;
   padding: 15px 0;
   text-align: center;
   position: relative;
 }
 
-.copyright p {
+.copyright div {
   color: #ffd15a;
 }
 
@@ -1781,3 +1780,35 @@ ul {
 
 /* Responsive CSS END
 /*----------------------------------------*/
+
+.footer.group {
+  background-color: rgba(33, 32, 71);
+  box-shadow: 0px 0px 50px rgba(2, 5, 21, 0.7);
+  color: white;
+  padding: 40px 0;
+}
+.footer.group a {
+  color: #ffd15a;
+}
+.footer.group a:hover {
+  color: #ffffff;
+}
+.footer.group svg {
+  font-size: 2rem;
+  padding: 4px;
+}
+.footer.group .image-container {
+  padding: 0 20px 20px 20px;
+}
+.social-container {
+  padding-bottom: 20px;
+}
+.footer.group .pt0 {
+  padding-top: 0px !important;
+}
+.footer.group .footer-menu {
+  text-transform: uppercase;
+}
+.footer.group .footer-menu span {
+  text-transform: lowercase;
+}
