--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1371,7 +1371,7 @@ ul {
   border: none;
 }
 
-.contact-form input[type="button"] {
+.contact-form input[type="submit"] {
   background: #ffd15a;
   -webkit-box-shadow: 0px 4px 64px rgba(255, 209, 90, 0.15);
   box-shadow: 0px 4px 64px rgba(255, 209, 90, 0.15);
